--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,5 +26,9 @@
     "react-dom": "^19.0.0",
     "tailwindcss": "^3.4.3",
     "vite": "^6.0.11"
+  },
+  "dependencies": {
+    "node-modules": "^0.0.1",
+    "react-router-dom": "^7.1.5"
   }
 }
