--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.4.1",
     "lucide-react": "^0.475.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "recharts": "^2.15.1"
   }
